--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>resume</title>
   </head>
+  <script src="static/modernizr.js"></script>
   <body>
     <div id="app"></div>
     <div></div>
